Add open source attributions
Add a list of attributions for open source software distributed in
releases. Users can access the list from the Preferences page.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -131,5 +131,9 @@
   "errorLoadingHistory": {
     "message": "Error loading history.",
     "description": "Message shown when an error occurs when loading history."
+  },
+  "openSourceAttributions": {
+    "message": "Open Source Attributions",
+    "description": "Text for link to open source attributions."
   }
 }
