Update extension description

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "A high-level live view of your bookmarks.",
+    "message": "Treetop is a high-level live view of your bookmarks.",
     "description": "Description of the extension."
   },
   "bookmarks": {
